Added include files for Ultralight SDK.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(MyApp C CXX)
 cmake_minimum_required(VERSION 3.3.2)
 
+add_subdirectory(cmake-build-debug/SDK)
+
 include(cmake/App.cmake)
 
 set(SOURCES "src/MyApp.h"
